# devops-project

./: .gitignore  Dockerfile.jenkins  Jenkinsfile  README.md  docker-compose.yml  install-docker.sh  package.json  pyproject.toml  server.js
public/: app.js  index.html  styles.css
src/: calculator.js  operations.js
src/calculator/: __init__.py  cli.py  operations.py
test/: calculator.test.js
tests/: test_cli.py  test_operations.py
