[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "A small sample Python project."
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
calculator = "calculator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
